--- a/imgui.ini
+++ b/imgui.ini
@@ -3,12 +3,16 @@ Pos=60,60
 Size=400,400
 
 [Window][Dear ImGui Demo]
-Pos=23,74
-Size=827,665
+Pos=-47,205
+Size=827,631
 
 [Window][Example: Assets Browser]
 Pos=1091,484
 Size=800,480
+
+[Window][BRDFs]
+Pos=16,39
+Size=430,233
 
 [Table][0xB6880529,2]
 RefScale=13
